mwlib/_mwscan.cc
/* Generated by re2c 1.3 */
#line 1 "_mwscan.re"
// -*- mode: c++ -*-
// Copyright (c) 2007-2008 PediaPress GmbH
// See README.txt for additional licensing information.

#include <Python.h>

#include <iostream>
#include <assert.h>
#include <vector>
using namespace std;

#define RET(x) {found(x); return x;}

typedef enum
{
  t_end,
  t_text,
  t_entity,
  t_special,
  t_magicword,
  t_comment,
  t_2box_open,			// [[
  t_2box_close,			// ]]
  t_http_url,
  t_break,
  t_begin_table,
  t_end_table,
  t_html_tag,
  t_singlequote,
  t_pre,
  t_section,
  t_section_end,
  t_item,
  t_colon,
  t_semicolon,
  t_hrule,
  t_newline,
  t_column,
  t_row,
  t_tablecaption,
  t_urllink,
} mwtok;

struct Token
{
  int type;
  int start;
  int len;
};

class Scanner
{
public:

  Scanner (Py_UNICODE * _start, Py_UNICODE * _end)
  {
    source = start = _start;
    end = _end;
    cursor = start;
    line_startswith_section = -1;
    tablemode = 0;
  }

  int found (mwtok val)
  {
    if (val == t_text && tokens.size ())
      {
	Token & previous_token (tokens[tokens.size () - 1]);
	if (previous_token.type == val)
	  {
	    previous_token.len += cursor - start;
	    return tokens.size () - 1;
	  }
      }
    Token t;
    t.type = val;
    t.start = (start - source);
    t.len = cursor - start;
    tokens.push_back (t);
    return tokens.size () - 1;
  }

  bool bol ()
  {
    if ((start == source) || (start[-1] == '\n'))
      {
	memset (&lineflags, 0, sizeof (lineflags));
	return true;
      }
    else
      {
	return false;
      }
  }

  bool eol () const
  {
    return *cursor == '\n' || *cursor == 0;
  }

  void newline ()
  {
    if (line_startswith_section >= 0)
      {
	tokens[line_startswith_section].type = t_text;
      }
    line_startswith_section = -1;
  }

  inline int scan ();

  Py_UNICODE *source;

  Py_UNICODE *start;
  Py_UNICODE *cursor;
  Py_UNICODE *end;
  vector < Token > tokens;

  int line_startswith_section;
  int tablemode;
  struct
  {
    int rowchar;
  } lineflags;
};


int
Scanner::scan ()
{
  start = cursor;

  Py_UNICODE *marker = cursor;

  Py_UNICODE *save_cursor = cursor;


#define YYCTYPE         Py_UNICODE
#define YYCURSOR        cursor
#define YYMARKER	marker
#define YYLIMIT   (end)
// #define YYFILL(n) return 0;

#line 146 "_mwscan.re"


/*
  the re2c manpage says:
  "The user must arrange for a sentinel token to appear at the end of input"
  \000 is our sentinel token.
*/

#line 179 "_mwscan.re"

  if (!bol ())
    {
      goto not_bol;
    }

#line 163 "_mwscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= '-') {
		if (yych <= '"') {
			if (yych <= 0x001F) goto yy2;
			if (yych <= ' ') goto yy4;
			if (yych <= '!') goto yy6;
		} else {
			if (yych <= ')') {
				if (yych <= '#') goto yy8;
			} else {
				if (yych <= '*') goto yy8;
				if (yych >= '-') goto yy11;
			}
		}
	} else {
		if (yych <= '<') {
			if (yych <= '9') goto yy2;
			if (yych <= ':') goto yy12;
			if (yych <= ';') goto yy15;
		} else {
			if (yych <= 'z') {
				if (yych <= '=') goto yy18;
			} else {
				if (yych <= '{') goto yy21;
				if (yych <= '|') goto yy22;
			}
		}
	}
yy2:
	++YYCURSOR;
yy3:
#line 234 "_mwscan.re"
	{goto not_bol;}
#line 200 "_mwscan.cc"
yy4:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '9') {
		if (yych <= 0x001F) goto yy5;
		if (yych <= '!') goto yy24;
	} else {
		if (yych <= ':') goto yy24;
		if (yych <= 'z') goto yy5;
		if (yych <= '|') goto yy24;
	}
yy5:
#line 224 "_mwscan.re"
	{RET(t_pre);}
#line 215 "_mwscan.cc"
yy6:
	++YYCURSOR;
yy7:
#line 200 "_mwscan.re"
	{
		if (tablemode) {
		        lineflags.rowchar=cursor[-1];
			RET(t_column);
		}

		if (*start==' ') {
			cursor = start+1;
			RET(t_pre);
		}
		RET(t_text);
	}
#line 232 "_mwscan.cc"
yy8:
	yych = *++YYCURSOR;
	if (yych == '#') goto yy8;
	if (yych == '*') goto yy8;
#line 229 "_mwscan.re"
	{RET(t_item);}
#line 239 "_mwscan.cc"
yy11:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '-') goto yy29;
	goto yy3;
yy12:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '*') {
		if (yych == '#') goto yy8;
		if (yych >= '*') goto yy8;
	} else {
		if (yych <= ':') {
			if (yych >= ':') goto yy12;
		} else {
			if (yych == '{') goto yy28;
		}
	}
yy14:
#line 230 "_mwscan.re"
	{RET(t_colon);}
#line 261 "_mwscan.cc"
yy15:
	yych = *++YYCURSOR;
	if (yych == ';') goto yy15;
#line 231 "_mwscan.re"
	{RET(t_semicolon);}
#line 267 "_mwscan.cc"
yy18:
	yych = *++YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == '\t') goto yy30;
	} else {
		if (yych <= ' ') goto yy30;
		if (yych == '=') goto yy18;
	}
yy20:
#line 225 "_mwscan.re"
	{
			line_startswith_section = found(t_section);
			return t_section;
		}
#line 282 "_mwscan.cc"
yy21:
	yych = *++YYCURSOR;
	if (yych == '|') goto yy32;
	goto yy3;
yy22:
	yych = *++YYCURSOR;
	if (yych <= ',') {
		if (yych == '+') goto yy34;
		goto yy7;
	} else {
		if (yych <= '-') goto yy37;
		if (yych == '}') goto yy40;
		goto yy7;
	}
yy23:
	yych = *++YYCURSOR;
yy24:
	if (yych <= '9') {
		if (yych <= 0x001F) goto yy25;
		if (yych <= ' ') goto yy23;
		if (yych <= '!') goto yy6;
	} else {
		if (yych <= 'z') {
			if (yych <= ':') goto yy26;
		} else {
			if (yych <= '{') goto yy28;
			if (yych <= '|') goto yy22;
		}
	}
yy25:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy5;
		} else {
			goto yy3;
		}
	} else {
		goto yy14;
	}
yy26:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy26;
	if (yych != '{') goto yy25;
yy28:
	yych = *++YYCURSOR;
	if (yych == '|') goto yy32;
	goto yy25;
yy29:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy42;
	goto yy25;
yy30:
	yych = *++YYCURSOR;
	if (yych == '\t') goto yy30;
	if (yych == ' ') goto yy30;
	goto yy20;
yy32:
	++YYCURSOR;
#line 185 "_mwscan.re"
	{++tablemode; RET(t_begin_table);}
#line 344 "_mwscan.cc"
yy34:
	yych = *++YYCURSOR;
	if (yych == '+') goto yy34;
#line 214 "_mwscan.re"
	{
		if (tablemode) 
			RET(t_tablecaption);
		if (*start==' ') {
			cursor = start+1;
			RET(t_pre);
		}
		RET(t_text);
	}
#line 358 "_mwscan.cc"
yy37:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy37;
#line 189 "_mwscan.re"
	{
		if (tablemode) 
			RET(t_row);
		if (*start==' ') {
			cursor = start+1;
			RET(t_pre);
		}
		RET(t_text);
	}
#line 372 "_mwscan.cc"
yy40:
	++YYCURSOR;
#line 186 "_mwscan.re"
	{--tablemode; RET(t_end_table);}
#line 377 "_mwscan.cc"
yy42:
	yych = *++YYCURSOR;
	if (yych != '-') goto yy25;
yy43:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy43;
#line 232 "_mwscan.re"
	{RET(t_hrule);}
#line 386 "_mwscan.cc"
}
#line 235 "_mwscan.re"



not_bol:
  cursor = save_cursor;
  marker = cursor;


#line 397 "_mwscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= 'Z') {
		if (yych <= '\'') {
			if (yych <= ' ') {
				if (yych <= 0x0000) goto yy48;
				if (yych == '\n') goto yy52;
				goto yy50;
			} else {
				if (yych <= '!') goto yy54;
				if (yych <= '%') goto yy50;
				if (yych <= '&') goto yy55;
				goto yy56;
			}
		} else {
			if (yych <= ';') {
				if (yych <= '/') goto yy50;
				if (yych <= '9') goto yy58;
				if (yych <= ':') goto yy61;
				goto yy50;
			} else {
				if (yych <= '<') goto yy63;
				if (yych <= '=') goto yy64;
				if (yych <= '@') goto yy50;
				goto yy58;
			}
		}
	} else {
		if (yych <= 'f') {
			if (yych <= '^') {
				if (yych <= '[') goto yy67;
				if (yych == ']') goto yy68;
				goto yy50;
			} else {
				if (yych <= '_') goto yy69;
				if (yych <= '`') goto yy50;
				if (yych <= 'e') goto yy58;
				goto yy70;
			}
		} else {
			if (yych <= 'm') {
				if (yych == 'h') goto yy71;
				if (yych <= 'l') goto yy58;
				goto yy72;
			} else {
				if (yych <= 'z') goto yy58;
				if (yych == '|') goto yy73;
				goto yy50;
			}
		}
	}
yy48:
	++YYCURSOR;
#line 293 "_mwscan.re"
	{newline(); return t_end;}
#line 455 "_mwscan.cc"
yy50:
	++YYCURSOR;
yy51:
#line 294 "_mwscan.re"
	{RET(t_text);}
#line 461 "_mwscan.cc"
yy52:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy74;
#line 266 "_mwscan.re"
	{newline(); RET(t_newline);}
#line 467 "_mwscan.cc"
yy54:
	yych = *++YYCURSOR;
	if (yych == '!') goto yy77;
	goto yy51;
yy55:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '9') {
		if (yych == '#') goto yy79;
		if (yych <= '/') goto yy51;
		goto yy81;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy51;
			goto yy81;
		} else {
			if (yych <= '`') goto yy51;
			if (yych <= 'z') goto yy81;
			goto yy51;
		}
	}
yy56:
	++YYCURSOR;
#line 285 "_mwscan.re"
	{RET(t_singlequote);}
#line 493 "_mwscan.cc"
yy58:
	yych = *++YYCURSOR;
yy59:
	if (yych <= 'Z') {
		if (yych <= '/') goto yy60;
		if (yych <= '9') goto yy58;
		if (yych >= 'A') goto yy58;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy58;
		} else {
			if (yych <= '`') goto yy60;
			if (yych <= 'z') goto yy58;
		}
	}
yy60:
#line 250 "_mwscan.re"
	{RET(t_text);}
#line 512 "_mwscan.cc"
yy61:
	++YYCURSOR;
yy62:
#line 284 "_mwscan.re"
	{RET(t_special);}
#line 518 "_mwscan.cc"
yy63:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '/') {
		if (yych == '!') goto yy83;
		if (yych <= '.') goto yy51;
		goto yy84;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy51;
			goto yy85;
		} else {
			if (yych <= '`') goto yy51;
			if (yych <= 'z') goto yy85;
			goto yy51;
		}
	}
yy64:
	yych = *++YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == '\t') goto yy87;
	} else {
		if (yych <= ' ') goto yy87;
		if (yych == '=') goto yy64;
	}
yy66:
#line 253 "_mwscan.re"
	{
			if (eol()) {
			        if (line_startswith_section>=0) {
				     line_startswith_section=-1;
				     RET(t_section_end);
                                } else {
				     RET(t_text);
                                }
			} else {
				RET(t_text);
			}
		    }
#line 558 "_mwscan.cc"
yy67:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '[':	goto yy89;
	case 'f':	goto yy91;
	case 'h':	goto yy92;
	case 'm':	goto yy93;
	default:	goto yy62;
	}
yy68:
	yych = *++YYCURSOR;
	if (yych == ']') goto yy94;
	goto yy62;
yy69:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy96;
	goto yy59;
yy70:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy97;
	goto yy59;
yy71:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy98;
	goto yy59;
yy72:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy99;
	goto yy59;
yy73:
	yych = *++YYCURSOR;
	if (yych <= '*') {
		if (yych == '!') goto yy77;
		goto yy62;
	} else {
		if (yych <= '+') goto yy100;
		if (yych == '|') goto yy77;
		goto yy62;
	}
yy74:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy74;
#line 265 "_mwscan.re"
	{newline(); RET(t_break);}
#line 604 "_mwscan.cc"
yy77:
	++YYCURSOR;
#line 268 "_mwscan.re"
	{
		if (tablemode) {
		        if (cursor[-2]!='!' || cursor[-2]==lineflags.rowchar) {
			       RET(t_column);
			}
		}
		cursor = start+1;
		RET(t_special);
	}
#line 617 "_mwscan.cc"
yy79:
	yych = *++YYCURSOR;
	if (yych <= 'W') {
		if (yych <= '/') goto yy80;
		if (yych <= '9') goto yy102;
	} else {
		if (yych <= 'X') goto yy104;
		if (yych == 'x') goto yy104;
	}
yy80:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy51;
		} else {
			goto yy62;
		}
	} else {
		goto yy60;
	}
yy81:
	yych = *++YYCURSOR;
	if (yych <= ';') {
		if (yych <= '/') goto yy80;
		if (yych <= '9') goto yy81;
		if (yych <= ':') goto yy80;
		goto yy105;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy80;
			goto yy81;
		} else {
			if (yych <= '`') goto yy80;
			if (yych <= 'z') goto yy81;
			goto yy80;
		}
	}
yy83:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy107;
	goto yy80;
yy84:
	yych = *++YYCURSOR;
	if (yych <= '@') goto yy80;
	if (yych <= 'Z') goto yy85;
	if (yych <= '`') goto yy80;
	if (yych >= '{') goto yy80;
yy85:
	yych = *++YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy80;
		if (yych <= ';') goto yy85;
		goto yy80;
	} else {
		if (yych == '>') goto yy108;
		goto yy85;
	}
yy87:
	yych = *++YYCURSOR;
	if (yych == '\t') goto yy87;
	if (yych == ' ') goto yy87;
	goto yy66;
yy89:
	++YYCURSOR;
#line 251 "_mwscan.re"
	{RET(t_2box_open);}
#line 684 "_mwscan.cc"
yy91:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy110;
	goto yy80;
yy92:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy111;
	goto yy80;
yy93:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy112;
	goto yy80;
yy94:
	++YYCURSOR;
#line 252 "_mwscan.re"
	{RET(t_2box_close);}
#line 701 "_mwscan.cc"
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy113;
	case 'F':	goto yy114;
	case 'N':	goto yy115;
	case 'S':	goto yy116;
	case 'T':	goto yy117;
	default:	goto yy59;
	}
yy97:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy118;
	goto yy59;
yy98:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy119;
	goto yy59;
yy99:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy120;
	goto yy59;
yy100:
	++YYCURSOR;
#line 278 "_mwscan.re"
	{
		if (tablemode) 
			RET(t_tablecaption);
		cursor = start+1;
		RET(t_special);
	}
#line 733 "_mwscan.cc"
yy102:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy80;
	if (yych <= '9') goto yy102;
	if (yych == ';') goto yy105;
	goto yy80;
yy104:
	yych = *++YYCURSOR;
	if (yych == ';') goto yy80;
	goto yy122;
yy105:
	++YYCURSOR;
#line 291 "_mwscan.re"
	{RET(t_entity);}
#line 748 "_mwscan.cc"
yy107:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy123;
	goto yy80;
yy108:
	++YYCURSOR;
#line 287 "_mwscan.re"
	{RET(t_html_tag);}
#line 757 "_mwscan.cc"
yy110:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy125;
	goto yy80;
yy111:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy126;
	goto yy80;
yy112:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy127;
	goto yy80;
yy113:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy128;
	goto yy59;
yy114:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy129;
	goto yy59;
yy115:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy130;
	if (yych == 'O') goto yy131;
	goto yy59;
yy116:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy132;
	goto yy59;
yy117:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy133;
	goto yy59;
yy118:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == ':') goto yy134;
	goto yy59;
yy119:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy135;
	goto yy59;
yy120:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy136;
	goto yy59;
yy121:
	yych = *++YYCURSOR;
yy122:
	if (yych <= ';') {
		if (yych <= '/') goto yy80;
		if (yych <= '9') goto yy121;
		if (yych <= ':') goto yy80;
		goto yy105;
	} else {
		if (yych <= 'F') {
			if (yych <= '@') goto yy80;
			goto yy121;
		} else {
			if (yych <= '`') goto yy80;
			if (yych <= 'f') goto yy121;
			goto yy80;
		}
	}
yy123:
	yych = *++YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy80;
		if (yych == '-') goto yy137;
		goto yy123;
	} else {
		if (yych == '=') goto yy123;
		if (yych <= '>') goto yy80;
		goto yy123;
	}
yy125:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy138;
	goto yy80;
yy126:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy139;
	goto yy80;
yy127:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy140;
	goto yy80;
yy128:
	yych = *++YYCURSOR;
	if (yych == 'D') goto yy141;
	goto yy59;
yy129:
	yych = *++YYCURSOR;
	if (yych == 'R') goto yy142;
	goto yy59;
yy130:
	yych = *++YYCURSOR;
	if (yych == 'W') goto yy143;
	goto yy59;
yy131:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy144;
	case 'E':	goto yy145;
	case 'G':	goto yy146;
	case 'T':	goto yy147;
	default:	goto yy59;
	}
yy132:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy148;
	goto yy59;
yy133:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy141;
	goto yy59;
yy134:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy149;
	goto yy80;
yy135:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == ':') goto yy150;
	if (yych == 's') goto yy151;
	goto yy59;
yy136:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy152;
	goto yy59;
yy137:
	yych = *++YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy80;
		if (yych == '-') goto yy153;
		goto yy123;
	} else {
		if (yych == '=') goto yy123;
		if (yych <= '>') goto yy80;
		goto yy123;
	}
yy138:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy155;
	goto yy80;
yy139:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy156;
	if (yych == 's') goto yy157;
	goto yy80;
yy140:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy158;
	goto yy80;
yy141:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy159;
	goto yy59;
yy142:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy160;
	goto yy59;
yy143:
	yych = *++YYCURSOR;
	if (yych == 'S') goto yy161;
	goto yy59;
yy144:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy141;
	if (yych == 'O') goto yy162;
	goto yy59;
yy145:
	yych = *++YYCURSOR;
	if (yych == 'D') goto yy163;
	goto yy59;
yy146:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy164;
	goto yy59;
yy147:
	yych = *++YYCURSOR;
	if (yych <= 'H') {
		if (yych == 'C') goto yy141;
		goto yy59;
	} else {
		if (yych <= 'I') goto yy165;
		if (yych == 'O') goto yy133;
		goto yy59;
	}
yy148:
	yych = *++YYCURSOR;
	if (yych == 'R') goto yy166;
	goto yy59;
yy149:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy167;
	goto yy80;
yy150:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy168;
	goto yy80;
yy151:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == ':') goto yy150;
	goto yy59;
yy152:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy169;
	goto yy59;
yy153:
	yych = *++YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy80;
		if (yych == '-') goto yy153;
		goto yy123;
	} else {
		if (yych <= '<') goto yy80;
		if (yych == '>') goto yy170;
		goto yy123;
	}
yy155:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy172;
	goto yy80;
yy156:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy173;
	goto yy80;
yy157:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy156;
	goto yy80;
yy158:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy174;
	goto yy80;
yy159:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy175;
	goto yy59;
yy160:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy177;
	goto yy59;
yy161:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy178;
	goto yy59;
yy162:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy179;
	goto yy59;
yy163:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy180;
	goto yy59;
yy164:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy181;
	goto yy59;
yy165:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy182;
	goto yy59;
yy166:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy141;
	goto yy59;
yy167:
	yych = *++YYCURSOR;
	if (yych <= '=') {
		if (yych <= '&') {
			if (yych <= '"') goto yy80;
			if (yych == '%') goto yy80;
			goto yy183;
		} else {
			if (yych <= '\'') goto yy80;
			if (yych <= ':') goto yy183;
			if (yych <= '<') goto yy80;
			goto yy183;
		}
	} else {
		if (yych <= '_') {
			if (yych <= '>') goto yy80;
			if (yych <= 'Z') goto yy183;
			if (yych <= '^') goto yy80;
			goto yy183;
		} else {
			if (yych <= '{') {
				if (yych <= '`') goto yy80;
				goto yy183;
			} else {
				if (yych <= '|') goto yy80;
				if (yych <= '~') goto yy183;
				goto yy80;
			}
		}
	}
yy168:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy186;
	goto yy80;
yy169:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == ':') goto yy187;
	goto yy59;
yy170:
	++YYCURSOR;
#line 290 "_mwscan.re"
	{RET(t_comment);}
#line 1070 "_mwscan.cc"
yy172:
	yych = *++YYCURSOR;
	if (yych <= '=') {
		if (yych <= '&') {
			if (yych <= '"') goto yy80;
			if (yych == '%') goto yy80;
			goto yy188;
		} else {
